tests/reference/ast_new-comment2-f0984d5.stderr
syntax error: Newline is unexpected here
  --> tests/tokens/comment2.py:38:6
   |
38 | x = [
   |      ^ 
